# omni-cache

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  code_quality.yml  pytest.yml  ruff.yml  security.yml
docs/: Makefile  adapter_creation.md  conf.py  exceptions_test_readme.md  index.rst  quickstart.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: adapters.rst  core.rst  exceptions.rst  index.rst  utils.rst
docs/developer_guide/: architecture.rst  custom_adapters.rst  index.rst  internals.rst  testing.rst
docs/examples/: basic_examples.rst  custom_adapters.rst  data_processing.rst  index.rst  microservices.rst  performance.rst  web_applications.rst
docs/user_guide/: adapters.rst  async_support.rst  basic_usage.rst  configuration.rst  decorators.rst  index.rst  installation.rst  migration_file_cache_to_disk.rst  monitoring.rst  performance.rst  routing.rst  troubleshooting.rst
examples/: README.md
examples/advanced/: background_warming.py  data_processing_pipeline.py  feature_flags_cached.py  graceful_degradation.py  microservices_async_caching.py  multi_level_cache_memory_redis.py  observability_metrics_example.py  rate_limit_with_cache.py  smartpool_diagnostics.py  smartpool_integration.py  stampede_protection.py
examples/benchmarks/: long_running_performance.py  long_running_smartpool_only_minimal.py  performance_smartpool_comparison.py  performance_stress_comparison.py  refactored_adapter_comparison.py  smartpool_cprofile.py
examples/getting_started/: basic_async_redis_adapter.py  basic_memcached_adapter.py  basic_memory_adapter.py  basic_redis_adapter.py  basic_smartpool_adapter.py  basic_usage.py  cache_aside_pattern.py  custom_file_cache_adapter.py  db_query_cache_with_invalidation.py  http_api_response_cache.py
scripts/: build_docs.sh  new_adapter.py  run_examples_tests.sh  run_formatters.sh  run_integration_tests_file_cache.sh  run_integration_tests_memory.sh  run_integration_tests_redis.sh  run_integration_tests_smartpool.sh  run_performance_tests_file_cache.sh  run_performance_tests_memory.sh  run_performance_tests_redis.sh  run_performance_tests_smartpool.sh  run_src_tests.sh  run_unit_tests_file_cache.sh  run_unit_tests_memory.sh  run_unit_tests_redis.sh  run_unit_tests_smartpool.sh
src/omni_cache/: __init__.py
src/omni_cache/adapters/: __init__.py
src/omni_cache/adapters/base/: __init__.py  base.py
src/omni_cache/adapters/disk/: __init__.py  config.py  disk.py  factory.py
src/omni_cache/adapters/file_cache/: __init__.py  factory.py  file_cache.py
src/omni_cache/adapters/memcached/: __init__.py  config.py  factory.py  memcached.py
src/omni_cache/adapters/memory/: __init__.py  config.py  factory.py  memory.py
src/omni_cache/adapters/redis/: __init__.py  async_redis.py  config.py  factory.py  redis.py
src/omni_cache/adapters/smartpool/: __init__.py  config.py  convenience.py  factory.py  factory_smartpool.py  smartpool.py  wrapper.py
src/omni_cache/core/: adapter_registry.py  config.py  factory_management.py  health_monitoring.py  manager.py  routing.py
src/omni_cache/core/exceptions/: __init__.py  adapter_exceptions.py  cache_exceptions.py  config_exceptions.py  connection_exceptions.py  exceptions.py  factory_exceptions.py  omni_cache_error.py  operation_exceptions.py  other_exceptions.py  pool_exceptions.py  serialization_exceptions.py
src/omni_cache/core/factories/: __init__.py  abstract_factory.py  factory.py  factory_metadata.py  factory_registry.py
src/omni_cache/core/interfaces/: __init__.py  adapter_interface.py  async_key_value_interface.py  async_pool_interface.py  base_pool.py  enum_dataclasses.py  factory_interface.py  interfaces.py  key_value_interface.py  manager_interface.py  pool_interface.py  statistic_interface.py
src/omni_cache/utils/: decorators.py
tests/integration/adapters/base/: test_base_adapter_integration.py
tests/integration/adapters/disk/: test_disk_integration.py
tests/integration/adapters/memcached/: test_memcached_integration.py
tests/integration/adapters/memory/: test_memory_integration.py
tests/integration/adapters/redis/: test_redis_integration.py  test_redis_integration_old.py
tests/integration/adapters/smartpool/: test_smartpool_integration.py  test_smartpool_integration_config.py
tests/performance/adapters/: conftest.py
tests/performance/adapters/disk/: test_disk_performance.py
tests/performance/adapters/memcached/: test_memcached_performance.py
tests/performance/adapters/memory/: test_memory_performance.py
tests/performance/adapters/redis/: test_redis_performance.py
tests/unit/: test_package_init.py
tests/unit/adapters/base/: test_base_adapter_config.py  (+4 more)
tests/unit/core/: conftest.py  test_adapter_registry.py  test_cache_manager.py  test_config.py  test_factory_management.py  test_health_monitoring.py  test_manager_coverage_boost.py  test_routing_py.py
tests/unit/utils/: conftest.py  test_async_cached_decorator.py  test_cache_config.py  test_cached_decorator.py  test_decorator_integration.py  test_decorators_coverage.py  test_error_handling_edge_cases.py  test_key_generator.py  test_memoize_decorator.py  test_pool_config.py  test_pooled_decorator.py  test_retry_with_cache_decorator.py  test_utility_functions.py
(+58 files in other folders)
